--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12.4", features = ["blocking", "json"] }
+serde = { version = "1.0.200", features = ["derive"] }
+serde_json = "1.0.116"
 tempfile = "3.10.1"
 tokio = { version = "1.37.0", features = ["full"] }
