--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-task = "4.7.1"
+chrono = "0.4.38"
+flume = "0.11.0"
+futures-lite = "2.3.0"
+futures-util = "0.3.30"
+once_cell = "1.19.0"
 reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 serde = { version = "1.0.200", features = ["derive"] }
 serde_json = "1.0.116"
