--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 async-task = "4.7.1"
 chrono = "0.4.38"
-flume = "0.11.0"
+flume = { version = "0.11.0", features = ["async", "select", "spin"] }
+futures = "0.3.30"
 futures-lite = "2.3.0"
 futures-util = "0.3.30"
 once_cell = "1.19.0"
