--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-io = "2.3.2"
 async-task = "4.7.1"
 chrono = "0.4.38"
 flume = { version = "0.11.0", features = ["async", "select", "spin"] }
