--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 async-io = "2.3.2"
+async-std = "1.12.0"
 async-task = "4.7.1"
 chrono = "0.4.38"
 flume = { version = "0.11.0", features = ["async", "select", "spin"] }
@@ -15,5 +16,6 @@ once_cell = "1.19.0"
 reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 serde = { version = "1.0.200", features = ["derive"] }
 serde_json = "1.0.116"
+surf = "2.3.2"
 tempfile = "3.10.1"
 tokio = { version = "1.37.0", features = ["full"] }
