example mutex rw
Signed-off-by: Luis Mori Guerra <luismorith@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-io = "2.3.2"
 async-std = "1.12.0"
 async-task = "4.7.1"
+axum = { version = "0.7.5", features = ["macros"] }
 chrono = "0.4.38"
 flume = { version = "0.11.0", features = ["async", "select", "spin"] }
 futures = "0.3.30"
