--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "rust-async-book-examples"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+logging_decorator = []
+
 [dependencies]
 async-io = "2.3.2"
 async-std = "1.12.0"
@@ -20,3 +23,4 @@ serde_json = "1.0.116"
 surf = "2.3.2"
 tempfile = "3.10.1"
 tokio = { version = "1.37.0", features = ["full"] }
+uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
